// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should indicate authenticated failed if form submission is not successful: Error msg and Formik 1`] = `
<Fragment>
  <h1>
    Access your account
  </h1>
  <Alert>
    Login failed! Check your credentials!
  </Alert>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should indicate authenticated failed if form submission is not successful: Formik children 1`] = `
<Form
  inline={false}
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    component={[Function]}
    label="Username"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    label="Password"
    name="password"
    type="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</Form>
`;

exports[`Login component should render a login form if user is not authenticated: Formik 1`] = `
<Fragment>
  <h1>
    Access your account
  </h1>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should render a login form if user is not authenticated: Formik children 1`] = `
<Form
  inline={false}
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    component={[Function]}
    label="Username"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    label="Password"
    name="password"
    type="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</Form>
`;
